adore-djaoka config